--- a/api.css
+++ b/api.css
@@ -83,6 +83,8 @@ button:hover{
 }
 */
 
+/*For Screen Resize*/
+
 @media only screen and (max-width: 650px), screen and (max-height: 600px) {
     
     div{
